<resources>
    <string name="app_name">Taxi LNR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Меню</string>
    <string name="nav_header_subtitle">{surname} {name}</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="welcome"><b>Собираетесь ли вы на работу, в аэропорт или в город,\n "Такси {name}"\n обеспечит надежную поездку за считанные минуты.\n Одно нажатие - и машина подъезжает прямо к вам.</b></string>
    <string name="logo">LOGO</string>
    <string name="create_akk">Создайте аккаунт</string>
    <string name="create_akk_greetings">Добро пожаловать в {name_taxi}, введите\n свои данные ниже, чтобы продолжить заказ.</string>
    <string name="cont">Продолжить</string>
    <string name="check_phone_number">Подтвердите свой номер\nтелефона</string>
    <string name="enter_check_code">Введите проверочный код из SMS, которое\nприслали на ваш номер</string>
    <string name="not_code">Не получили код</string>
    <string name="retry_code">Отправить код повторно {time}</string>
    <string name="log_in">Войдите в свой аккаунт</string>
    <string name="returned">С возвращением, введите свои данные ниже,\nчтобы продолжить заказ</string>
    <string name="location_permission">Доступ к вашему\nместоположению</string>
    <string name="location_permission_true">Разрешите получать информацю о вашем\nместоположении</string>
    <string name="allow">Разрешить</string>
    <string name="select_you_country">Выберете свой город</string>
    <string name="enter_you_geolocation">Укажите свою геолокацию для поиска такси</string>
    <string name="city">Город</string>
    <string name="geolocation">Местоположение</string>
    <string name="Lutugino">Лутугино</string>
    <string name="Lugansk">Луганск</string>
    <string name="you_geolocation">Ваше местоположение</string>
    <string name="bottom_sheet_content">Контент</string>
    <string name="bottom_sheet_peek">Контент</string>
    <string name="end_country">Место прибытия</string>
    <string name="start_country">Место начала поездки</string>
    <string name="buy">Заказать</string>
    <string name="search_address">Поиск адреса</string>
    <string name="rate">0.0</string>
    <string name="profile">Профиль</string>
    <string name="FAQ">О программе</string>
    <string name="exit">Выход</string>
    <string name="lasted_orders">История заказов</string>
    <string name="settings">Настройки</string>
    <string name="phone_number">  +79591234567</string>
    <string name="phone"> Телефон</string>
    <string name="email"> E-mail</string>
    <string name="name"> Имя</string>
    <string name="surname"> Фамилия</string>
    <string name="card">            Card-0000</string>
    <string name="update">Изменить</string>
    <string name="done">Выполненные</string>
    <string name="canceled">Отмененные</string>
    <string name="model_car">Марка машины</string>
    <string name="date_time">{date} {time}</string>
    <string name="address_start">Адрес отправления</string>
    <string name="address_end">Адрес прибытия</string>
    <string name="news">Новости</string>
    <string name="email_check_going">Счета за совершенные поездки</string>
    <string name="FAQS">FAQ`s</string>
    <string name="refactor_phone_number">Изменить номер телефона</string>
    <string name="unlock_account">Разблокировать аккаунт</string>
    <string name="pay_money_up">Оплата и ценообразование</string>
    <string name="pay_return_go">Плата за отмену поездки</string>
    <string name="pay_damage">Оплата за ущерб или уборку</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="reg">Регистрация</string>
    <string name="condition_position">Условия и положения</string>
    <string name="condition_position_taxi">Условия и положения для клиентов такси</string>
    <string name="important">ВАЖНОЕ:</string>
    <string name="terms_conditions">НАСТОЯЩИЕ УСЛОВИЯ И ПОЛОЖЕНИЯ (»Условия") ОПРЕДЕЛЯЮТ ПРИЧИНУ, ПО КОТОРОЙ ГЕТТ ПРЕДОСТАВИТ ВАМ ДОСТУП К ПЛАТФОРМЕ МОБИЛЬНЫХ ПРИЛОЖЕНИЙ ГЕТТ, ЧТОБЫ ВЫ МОГЛИ ЗАКАЗАТЬ ОПРЕДЕЛЕННЫЕ ТРАНСПОРТНЫЕ УСЛУГИ У СТОРОННИХ ВОДИТЕЛЕЙ, РАЗМЕСТИВ ИХ ЧЕРЕЗ МОБИЛЬНОЕ ПРИЛОЖЕНИЕ ГЕТТ. ПЛАТФОРМА. В НАСТОЯЩИХ УСЛОВИЯХ (НАРЯДУ С ДОКУМЕНТАМИ, НА КОТОРЫЕ ССЫЛАЮТСЯ ЗДЕСЬ) ИЗЛАГАЮТСЯ УСЛОВИЯ ИСПОЛЬЗОВАНИЯ, ПРИ КОТОРЫХ В КАЧЕСТВЕ КЛИЕНТА МОЖНО ПОЛЬЗОВАТЬСЯ ПРИЛОЖЕНИЕМ И ЗАПРАШИВАТЬ ТРАНСПОРТНЫЕ УСЛУГИ. ИСПОЛЬЗУЯ ПРИЛОЖЕНИЕ И ВРУЧАЯ СВИДЕТЕЛЬСТВО О ПРИЕМЕ, ВЫ СОГЛАШАЕТЕСЬ И СОГЛАШАЕТЕСЬ СОБЛЮДАТЬ НАСТОЯЩИЕ УСЛОВИЯ ИСПОЛЬЗОВАНИЯ, КОТОРЫЕ, СРЕДИ ПРОЧЕГО, ПРИМЕНЯЮТСЯ К ВАМ ИЛИ ВСЕМ УСЛУГАМ, ПРЕДОСТАВЛЯЕМЫМ ЧЕРЕЗ ПРИЛОЖЕНИЕ ВЕЛИКОБРИТАНИИ. ИСПОЛЬЗУЙТЕ ПРИЛОЖЕНИЕ И ЗАПРОСИТЕ ТРАНСПОРТНЫЕ УСЛУГИ. ИСПОЛЬЗУЯ ПРИЛОЖЕНИЕ И ВРУЧАЯ СВИДЕТЕЛЬСТВО О ПРИЕМЕ, ВЫ СОГЛАШАЕТЕСЬ И СОГЛАШАЕТЕСЬ СОБЛЮДАТЬ НАСТОЯЩИЕ УСЛОВИЯ ИСПОЛЬЗОВАНИЯ, КОТОРЫЕ, СРЕДИ ПРОЧЕГО, ПРИМЕНЯЮТСЯ К ВАМ ИЛИ ВСЕМ УСЛУГАМ, ПРЕДОСТАВЛЯЕМЫМ ЧЕРЕЗ ПРИЛОЖЕНИЕ РОССИИ.</string>
    <string name="unknown_error_message">Упс, возникла неизвестная ошибка</string>
    <string name="network_error_message">Ошибка подключения к интернету</string>
    <string name="remote_error_message">Удаленная ошибка</string>
    <string name="name_surname">Имя Фамилия</string>
    <string name="pay_method">Способ оплаты</string>
    <string name="sale">Скидка</string>
    <string name="up">Подобрать</string>
    <string name="down">Высадить</string>
    <string name="select">Принять</string>
    <string name="new_orders">У вас 0 новых запросов</string>
    <string name="time_echo">10 мин</string>
    <string name="time">Время</string>
    <string name="range">Расстояние</string>
    <string name="range_echo">10 км</string>
    <string name="price_echo">1000р</string>
    <string name="pay">Оплата</string>
    <string name="time_go">Время прибытия через</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="deleteOrder">Отмена заказа</string>
    <string name="pleaseSelectDeleteOrder">Пожалуйста, выберите причину отмены:</string>
    <string name="deleteOrderDriver">Отмена заказа водителем</string>
    <string name="driverGoLater">Водитель приехал позже</string>
    <string name="accidentTaxi">Такси попало в аварию</string>
    <string name="myCause">Своя причина</string>
    <string name="deleted">Отменить</string>
    <string name="price">Стоимомть</string>
    <string name="cancel">Отменить</string>
    <string name="loading">Ожидайте</string>
    <string name="hours">Часы онлайн</string>
    <string name="orders">Заказы</string>
    <string name="wallet">Кошелек</string>
    <string name="sum">Сумма</string>
    <string name="addCar">Добавление машины</string>
    <string name="type_car">Тип кузова</string>
    <string name="number">Номер</string>
    <string name="car_brand">Марка/модель</string>
    <string name="save">Сохранить</string>
    <string name="comment">Комментарий</string>
    <string name="rate_pass">Оцените своего пассажира</string>
    <string name="rate_user">Оцените своего водителя</string>
    <string name="review">Оставьте отзыв</string>
    <string name="eco">Эконом</string>
    <string name="middle">Стандарт</string>
    <string name="business">Бизнес</string>
    <string name="count_orders">Заказы</string>
    <string name="error_not_read_point">Невозможно поставить сюда точку</string>
    <string name="color">Цвет</string>
    <string name="classCar">Класс автомобиля</string>
    <string name="findMark">Поиск марки</string>
    <string name="findModel">Поиск модели</string>
    <string name="home">Адрес дома</string>
    <string name="work">Адрес работы</string>
    <string name="incoming">Дневная прибыль</string>
    <string name="all_incoming">общий доход</string>
    <string name="nal">Наличная прибыть</string>
    <string name="offnal">Безналичная прибыть</string>
    <string name="commission">Комиссия</string>
    <string name="take_off">Снять</string>
    <string name="reject">Запросить деньги</string>
    <string name="debtText">Ваша задолженность составляет:</string>
    <string name="debtText2">Для погнашения задолженности даются 3 дня, если в теченнии этого времени задолженность не была погашена, аккаунт блокируют без возвомжности возврата!</string>
    <string name="nalText">Наличный расчет</string>
    <string name="offnalText">Безналичный расчет</string>
    <string name="off_nal_incoming">безналичный доход</string>
    <string name="place">Я подъехал</string>
    <string name="yoomoney_card">Снять деньги можно на карту юмани, укажите снизу номер карты, номер телефона или почту</string>
    <string name="select_card_number">Введите номер карты</string>
    <string name="risk_payment">Если платеж не поступил моментально, пожалуйста, подождите 24 часа. Если в течении этоговремени ничего не произошло, обратитесь на почту техподдержки: mail@mail.ru</string>
    <string name="auth">Войти</string>
    <string name="off">Отменить</string>
    <string name="wait_user">Время ожидания:</string>
    <string name="price_wait">Стоимость ожидания:</string>
    <string name="msg_switch_network">Для корректной работы приложения требуется включить местоположение</string>
    <string name="start_bold"><b>Старт: </b></string>
    <string name="finish_bold"><b>Финиш: </b></string>
</resources>