<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile_driver"
            android:icon="@drawable/profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/card"
            android:title="@string/wallet" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/history_order"
            android:title="@string/lasted_orders" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/faq_app"
            android:title="@string/FAQ"/>
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/exit"
            android:title="@string/exit"/>
    </group>
</menu>