<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_driver"
    app:startDestination="@+id/nav_home_driver">

    <fragment android:id="@+id/nav_home_driver"
        android:name="com.example.taxi_full.ui.home.HomeFragmentDriver"
        android:label="home_driver"
        tools:layout="@layout/fragmant_home_driver"/>

    <fragment
        android:id="@+id/nav_profile_driver"
        android:name="com.example.taxi_full.ui.profile.ProfileDriverFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile_driver" />

    <fragment
        android:id="@+id/nav_wallet"
        android:name="com.example.taxi_full.ui.wallet.WalletFragment"
        android:label="@string/wallet"
        tools:layout="@layout/fragment_wallet" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.taxi_full.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.taxi_full.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment android:id="@+id/nav_info"
        android:name="com.example.taxi_full.ui.info.InfoFragment"
        android:label="@string/FAQ"
        tools:layout="@layout/fragment_info"/>

    <fragment android:id="@+id/nav_exit"
        android:name="com.example.taxi_full.ui.exit.ExitFragment"
        android:label="@string/exit"
        tools:layout="@layout/fragment_exit"/>

</navigation>