<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_go_driver"
    android:layout_width="match_parent"
    android:layout_height="260dp"
    android:background="@android:color/white"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="260dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/topPanel"
        android:visibility="visible"
        android:background="@color/white">

        <EditText
            android:id="@+id/text_bottom"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="85dp"
            android:backgroundTint="@color/gray"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/start_country"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_mono_bold" />

        <FrameLayout
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:translationY="15dp">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/profile_man"
                android:layout_marginStart="10dp"
                android:contentDescription="TODO" />

        </FrameLayout>

    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/bp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="160dp"
                android:layout_height="100dp">

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto_mono_bold"
                    android:text="@string/time_echo"
                    android:textColor="@color/dark_gray"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="57dp"
                    android:layout_marginTop="55dp"
                    android:text="@string/time"
                    android:textSize="16sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="120dp"
                android:layout_height="100dp">

                <TextView
                    android:id="@+id/distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto_mono_bold"
                    android:text="@string/range_echo"
                    android:textColor="@color/dark_gray"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="55dp"
                    android:text="@string/range"
                    android:textSize="16sp" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto_mono_bold"
                    android:text="@string/price_echo"
                    android:textColor="@color/dark_gray"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="55dp"
                    android:text="@string/pay"
                    android:textSize="16sp" />

            </FrameLayout>

        </LinearLayout>

        <Button
            android:id="@+id/place"
            android:layout_width="231dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/blue"
            android:text="@string/place" />

        <Button
            android:id="@+id/land"
            android:layout_width="231dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/blue"
            android:text="@string/down"
            android:visibility="gone"/>

        <ImageButton
            android:id="@+id/tel"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/tel"
            android:layout_marginStart="30dp"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/todo" />


    </FrameLayout>


</LinearLayout>