<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/white"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">



    <TextView
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:translationX="160dp"
        android:text="@string/nav_header_title"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:fontFamily="@font/roboto_mono_bold">

    </TextView>
<FrameLayout
    android:layout_width="300dp"
    android:layout_height="100dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/man" />


    <TextView
        android:id="@+id/menuNameSurname"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="@string/nav_header_subtitle"
        android:translationX="90dp"
        android:translationY="30dp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_mono_bold" />


    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:srcCompat="@drawable/star"
        android:translationX="90dp"
        android:translationY="60dp"/>

    <TextView
        android:id="@+id/menuRate"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:textColor="@color/black"
        android:translationX="120dp"
        android:translationY="60dp"
        android:fontFamily="@font/roboto_mono_bold"
        android:text="@string/rate">

    </TextView>

</FrameLayout>



</LinearLayout>
